Prevent citationsList from overflowing when citations are too long

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -159,3 +159,8 @@ $citationHeight: 50px;
 .pageNavigation {
 	margin-top: auto;
 }
+
+.citationsList {
+	height: 510px;
+   	overflow: auto;
+}
